# Interval-Based

./: CMakeLists.txt  LICENSE  README.md
cmake/: INTERVAL_CCDDependencies.cmake  INTERVAL_CCDDownloadExternal.cmake  INTERVAL_CCDUtils.cmake  Warnings.cmake
intervalccd/: CMakeLists.txt  interval.hpp  interval_ccd.cpp  interval_ccd.hpp  interval_root_finder.cpp  interval_root_finder.hpp
